--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="{{ site.lang | default: "en-US" }}">
 <head><meta charset="utf-8"/><title>game</title></head>
 <body style="margin:0;padding:0;background-color:black">
 	
